# server/runtime_go_match_core.go
@@ -19,7 +19,6 @@ import (
 	"database/sql"
 	"errors"
 	"fmt"
-
 	"github.com/gofrs/uuid"
 	"github.com/heroiclabs/nakama-common/rtapi"
 	"github.com/heroiclabs/nakama-common/runtime"
@@ -39,12 +38,14 @@ type RuntimeGoMatchCore struct {
 
 	match runtime.Match
 
-	id      uuid.UUID
-	node    string
-	stopped *atomic.Bool
-	idStr   string
-	stream  PresenceStream
-	label   *atomic.String
+	id       uuid.UUID
+	node     string
+	module   string
+	tickRate int
+	stopped  *atomic.Bool
+	idStr    string
+	stream   PresenceStream
+	label    *atomic.String
 
 	runtimeLogger runtime.Logger
 	db            *sql.DB
@@ -54,7 +55,7 @@ type RuntimeGoMatchCore struct {
 	ctxCancelFn context.CancelFunc
 }
 
-func NewRuntimeGoMatchCore(logger *zap.Logger, matchRegistry MatchRegistry, router MessageRouter, id uuid.UUID, node string, stopped *atomic.Bool, db *sql.DB, env map[string]string, nk runtime.NakamaModule, match runtime.Match) (RuntimeMatchCore, error) {
+func NewRuntimeGoMatchCore(logger *zap.Logger, module string, matchRegistry MatchRegistry, router MessageRouter, id uuid.UUID, node string, stopped *atomic.Bool, db *sql.DB, env map[string]string, nk runtime.NakamaModule, match runtime.Match) (RuntimeMatchCore, error) {
 	ctx, ctxCancelFn := context.WithCancel(context.Background())
 	ctx = NewRuntimeGoContext(ctx, node, env, RuntimeExecutionModeMatch, nil, 0, "", "", nil, "", "", "")
 	ctx = context.WithValue(ctx, runtime.RUNTIME_CTX_MATCH_ID, fmt.Sprintf("%v.%v", id.String(), node))
@@ -67,6 +68,7 @@ func NewRuntimeGoMatchCore(logger *zap.Logger, matchRegistry MatchRegistry, rout
 
 		// deferMessageFn set in MatchInit.
 		// presenceList set in MatchInit.
+		// tickRate set in MatchInit.
 
 		match: match,
 
@@ -74,6 +76,7 @@ func NewRuntimeGoMatchCore(logger *zap.Logger, matchRegistry MatchRegistry, rout
 		node:    node,
 		stopped: stopped,
 		idStr:   fmt.Sprintf("%v.%v", id.String(), node),
+		module:  module,
 		stream: PresenceStream{
 			Mode:    StreamModeMatchAuthoritative,
 			Subject: id,
@@ -99,8 +102,9 @@ func (r *RuntimeGoMatchCore) MatchInit(presenceList *MatchPresenceList, deferMes
 	if tickRate > 30 || tickRate < 1 {
 		return nil, 0, errors.New("MatchInit returned invalid tick rate, must be between 1 and 30")
 	}
+	r.tickRate = tickRate
 
-	if err := r.matchRegistry.UpdateMatchLabel(r.id, label); err != nil {
+	if err := r.matchRegistry.UpdateMatchLabel(r.id, r.tickRate, r.module, label); err != nil {
 		return nil, 0, err
 	}
 	r.label.Store(label)
@@ -179,8 +183,16 @@ func (r *RuntimeGoMatchCore) MatchTerminate(tick int64, state interface{}, grace
 	return newState, nil
 }
 
+func (r *RuntimeGoMatchCore) GetState(state interface{}) (string, error) {
+	return fmt.Sprintf("%+v", state), nil
+}
+
 func (r *RuntimeGoMatchCore) Label() string {
 	return r.label.Load()
+}
+
+func (r *RuntimeGoMatchCore) HandlerName() string {
+	return r.module
 }
 
 func (r *RuntimeGoMatchCore) Cancel() {
@@ -366,8 +378,7 @@ func (r *RuntimeGoMatchCore) MatchLabelUpdate(label string) error {
 	if r.stopped.Load() {
 		return ErrMatchStopped
 	}
-
-	if err := r.matchRegistry.UpdateMatchLabel(r.id, label); err != nil {
+	if err := r.matchRegistry.UpdateMatchLabel(r.id, r.tickRate, r.module, label); err != nil {
 		return fmt.Errorf("error updating match label: %v", err.Error())
 	}
 	r.label.Store(label)
